# Gazeborobot

./: README.md
ball_pusher_robot/: CMakeLists.txt  package.xml
ball_pusher_robot/launch/: display_rviz.launch.py  spawn_robot.launch.py
ball_pusher_robot/rviz/: view_robot.rviz
ball_pusher_robot/urdf/: ball_pusher.urdf  ball_pusher_gazebo.urdf  ball_pusher_with_physics.urdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ball_pusher_robot/share/ament_index/resource_index/package_run_dependencies/: ball_pusher_robot
install/ball_pusher_robot/share/ament_index/resource_index/parent_prefix_path/: ball_pusher_robot
install/ball_pusher_robot/share/ball_pusher_robot/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ball_pusher_robot/share/ball_pusher_robot/cmake/: ball_pusher_robotConfig.cmake
install/ball_pusher_robot/share/ball_pusher_robot/urdf/: ball_pusher.urdf  ball_pusher_with_physics.urdf
log/: latest_build
my_bot_control/: CMakeLists.txt  package.xml
my_bot_control/config/: controllers.yaml
my_bot_teleop/: keyboard_teleop.py  package.xml  setup.py
my_bot_teleop/log/: latest_list
my_bot_teleop/my_bot_teleop/: keyboard_teleop.py
