<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_bot_control</name>
  <version>0.0.0</version>
  <description>ros2_control configs and controllers for my robot</description>
  <maintainer email="gayathri17603@gmail.com">gayathri</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>my_bot_description</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
