<?xml version="1.0"?>
<package format="3">
  <name>my_bot_control</name>
  <version>0.0.1</version>
  <description>Control and launch files for Ball Pusher robot</description>

  <maintainer email="you@example.com">Gayathri</maintainer>
  <license>Apache-2.0</license>

  <!-- This is NOT a python package -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

</package>
